--- a/css/nicole.css
+++ b/css/nicole.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Abril Fatface';
     font-size: 1.2em;
-    color: beige;
+    background-color: #BED8DB;
 }
 
 .text-title {
