--- a/css/nicole.css
+++ b/css/nicole.css
@@ -7,14 +7,18 @@ body {
 
 .text-title {
     font-family: 'Abril Fatface';
-    font-size: 8em;
+    font-size: 5rem;
     color: beige;
 }
 
 .text-subtitle {
     font-family: 'Oxanium';
-    font-size: 2.2em;
+    font-size: 2.2rem;
     color: beige;
+}
+
+.t {
+    color: rgb(210, 242, 248);
 }
 
 .bg-title {
@@ -31,7 +35,11 @@ body {
 }
 
 .mt-n6 {
-    margin-top: -4rem;
+    margin-top: -7rem;
+}
+
+.mt-n7 {
+    margin-top: -5rem;
 }
 
 .text-span {
@@ -45,4 +53,14 @@ body {
 
 .fon {
     font-family: 'Crete Round', serif;
+}
+
+#corpo video {
+    width: 750px;
+    margin: 0 auto;
+    display: block;
+}
+
+.back {
+    background-color: #0D0D0D;
 }
